+ Bug fixes for optoin parsing + Added test utility for option parsing

--- a/test/Makefile
+++ b/test/Makefile
@@ -3,14 +3,15 @@ TESTS=	testlist testhash testtcpc testtcps testudpc testudps testpool \
 	testpcache testuemux testrb markov markov2 testmatch \
 	testsplay testcsv testbitset testshell testgraph testprintf teststr \
 	testbitops testpspawn testdynmem testtlsf testmalloc testregex \
-	testlex testsort
+	testlex testsort testoptparse
 	
 CFILES= testlist.c testhash.c testtcpc.c testtcps.c testudpc.c testudps.c \
 	testpool.c testmem.c testheap.c testhw.c testtime.c testavl.c \
 	testpack.c testdl.c testpcache.c testuemux.c testrb.c markov.c	\
 	markov2.c testmatch.c testsplay.c testcsv.c testbitset.c \
 	testshell.c testgraph.c testprintf.c teststr.c testbitops.c \
-	testdynmem.c testtlsf.c testmalloc.c testregex.c testlex.c testsort.c
+	testdynmem.c testtlsf.c testmalloc.c testregex.c testlex.c testsort.c \
+	testoptparse.c
 
 CC=gcc
 
@@ -147,6 +148,9 @@ testregex: testregex.c $(CAT_DBG_LIBDEP)
 
 testlex: testlex.c $(CAT_DBG_LIBDEP)
 	$(CC) $(CAT_DBG_CF) -o testlex testlex.c $(INC) $(CAT_DBG_LIB)
+
+testoptparse: testoptparse.c $(CAT_DBG_LIBDEP)
+	$(CC) $(CAT_DBG_CF) -o testoptparse testoptparse.c $(INC) $(CAT_DBG_LIB)
 
 #testsort: testsort.c $(CAT_DBG_LIBDEP)
 #	$(CC) $(CAT_DBG_CF) -o testsort testsort.c $(INC) $(CAT_DBG_LIB)
