Simplify and improve performance quicksort performance:  - Take median of 3 medians for larger array pivot selection.  - Remove int and long swap and replace with void* swap.  - Add speed test to test swaps on larger data structures.

--- a/test/Makefile
+++ b/test/Makefile
@@ -154,6 +154,7 @@ testoptparse: testoptparse.c $(CAT_DBG_LIBDEP)
 
 testsort: testsort.c $(CAT_LIBDEP)
 	$(CC) $(CAT_CF) -o testsort testsort.c $(INC) $(CAT_LIB)
+#	$(CC) $(CAT_DBG_CF) -o testsort testsort.c $(INC) $(CAT_DBG_LIB)
 
 testcatstr: testcatstr.c $(CAT_DBG_LIBDEP)
 	$(CC) $(CAT_DBG_CF) -o testcatstr testcatstr.c $(INC) $(CAT_DBG_LIB)
