--- a/conf/build_system.conf
+++ b/conf/build_system.conf
@@ -1,7 +1,5 @@
 CC=gcc
-#CC=pcc 
-
+AR=ar
+RANLIB=ranlib
 ISYSTEM=
-#ISYSTEM=-isystem /usr/include \
-#	-isystem /usr/lib/gcc/i486-linux-gnu/4.1.3/include/
-
+NOSTD=-nostdlib
