Update gitignore so status is less messy

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
-lib
-obj
+lib/
+build/
+include/cat/config.h
+src/makefile
+
+test/*
+!test/*.[ch]
+!test/*.awk
+!test/*.pl
+!test/Makefile
+
+conf/build_system.conf
+conf/config.h
+conf/platform.conf
+
+src/.depend
+
+utils/*
+!utils/*.c
+!utils/Makefile
+
